Fixed document preview so that all text is visible.

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,6 +57,15 @@ body {
   box-shadow: 0 0 5px 0 rgb(0, 0, 0, .5);
   background-color: white;
 }
+.ql-editor2 {
+  width: 8.5in;
+  min-height: 11in;
+  max-height: 11in;
+  padding: 0 1in 1in 1in !important;
+  margin: 1rem;
+  box-shadow: 0 0 5px 0 rgb(0, 0, 0, .5);
+  background-color: white;
+}
 
 .ql-container.ql-snow {
   border: none !important;
